<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".FormularioCadastro">

        <TextView
            android:id="@+id/tituloCadastre_se"
            style="@style/tiluloCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_cadastre_se"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <View
            android:id="@+id/conteinerComponents"
            style="@style/conteinerComponents"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tituloCadastre_se"
            />

        <EditText
            android:id="@+id/editTextNome"
            style="@style/editText"
            android:inputType="text"
            android:hint="@string/texto_nome"
            app:layout_constraintTop_toTopOf="@id/conteinerComponents"
            app:layout_constraintStart_toStartOf="@id/conteinerComponents"
            app:layout_constraintEnd_toEndOf="@id/conteinerComponents"
            />

        <EditText
            android:id="@+id/editEmail"
            style="@style/editText"
            android:inputType="textEmailAddress"
            android:hint="@string/texto_email"
            android:drawableEnd="@drawable/email_icone"
            app:layout_constraintTop_toBottomOf="@id/editTextNome"
            app:layout_constraintStart_toStartOf="@id/conteinerComponents"
            app:layout_constraintEnd_toEndOf="@id/conteinerComponents"
            />

        <EditText
            android:id="@+id/editSenha"
            style="@style/editText"
            android:inputType="textPassword"
            android:hint="@string/texto_senha"
            android:drawableEnd="@drawable/olho_icone"
            app:layout_constraintStart_toStartOf="@id/conteinerComponents"
            app:layout_constraintEnd_toEndOf="@id/conteinerComponents"
            app:layout_constraintTop_toBottomOf="@id/editEmail"
            android:autofillHints="password"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/botaoCadastrar"
            style="@style/botao"
            android:layout_marginTop="40dp"
            android:text="@string/texto_botao_cadastrar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/conteinerComponents"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>